--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.username=sa
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.async.request-timeout=60000
