--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.h2.console.enabled=true
-
+#Config do banco de dados
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.url=jdbc:h2:file:/ubuntu/home/bd
 spring.datasource.username=sa
 spring.datasource.password=password
-
+#Atualização das tabela
 spring.jpa.hibernate.ddl-auto=update
-server.tomcat.connection-timeout=60000ms
+#Habilita o h2-console
+spring.h2.console.enabled=true
